--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,19 @@
   box-sizing: border-box;
 }
 
+/* -----------------ROOT----------------- */
+
+#root {
+  --clr-primary-bg: black;
+  --clr-secondary-bg: rgb(32, 32, 32);
+
+  --clr-font-primary: whitesmoke;
+  --clr-font-accent: lightskyblue;
+  --clr-font-dark: black;
+  --clr-font-accent-2: lightblue;
+}
+/* -----------------APP----------------- */
+
 .App {
   font-family: "arial", sans-serif;
   scroll-behavior: smooth scroll;
@@ -14,11 +27,13 @@
   scroll-snap-align: start;
 }
 
+/* -----------------NAVBAR----------------- */
+
 .navbar {
   display: flex;
   overflow: hidden;
   position: fixed;
-  background: hsl(0, 0%, 0%);
+  background: var(--clr-primary-bg);
   width: 100dvw;
   height: 5rem;
   padding-block: 1rem;
@@ -30,8 +45,8 @@
 }
 
 .navbar a:hover:not(.logo) {
-  color: lightskyblue;
-  outline: 3px solid lightskyblue;
+  color: var(--clr-font-accent);
+  outline: 3px solid var(--clr-font-accent);
   border-radius: 100px;
 }
 
@@ -41,12 +56,13 @@
   font-size: 3rem;
   flex: 5;
   padding-inline-start: 2rem;
-  border-right: 3px solid whitesmoke;
+  border-right: 3px solid var(--clr-font-accent);
 }
 
 .logo {
   text-decoration: none;
-  color: whitesmoke;
+  color: var(--clr-font-primary);
+  font-weight: 600;
 }
 
 .nav-items-right {
@@ -61,27 +77,29 @@
 
 .nav-items-right a {
   text-decoration: none;
-  color: whitesmoke;
+  color: var(--clr-font-primary);
 }
 
 /* -----------------HOME----------------- */
 
 .home-wrapper {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: left;
-  height: 100vh;
-  text-align: left;
-  width: 100%;
-  background-color: black;
-  padding-inline: 7%;
+  height: 100svh;
   position: relative;
+  gap: 5%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--clr-primary-bg);
+}
+
+.home-flex-1 {
+  display: flex;
+  flex-direction: column;
 }
 
 .greeting {
-  font-size: 85px;
-  font-weight: 100;
+  font-size: 5rem;
+  font-weight: 600;
 }
 
 .name {
@@ -89,22 +107,25 @@
 }
 
 .description {
-  margin-right: 150px;
   min-width: 240px;
   max-width: 650px;
   line-height: 2rem;
   font-size: 1.25rem;
-  /* font-style: italic; */
-  padding-block: 2rem;
+  padding-top: 1.25rem;
+  text-justify: distribute-all-lines;
 }
 
 .description a {
-  color: lightskyblue;
+  color: var(--clr-font-accent-2);
   text-decoration: none;
 }
 
 .description a:hover {
-  color: lightskyblue;
+  color: var(--clr-font-accent);
+}
+
+.home-wrapper hr {
+  margin-top: 1.25rem;
 }
 
 .cta {
@@ -112,54 +133,73 @@
   font-weight: 600;
   font-size: 24px;
   min-width: 240px;
-  width: fit-content;
+  width: 100%;
   align-items: left;
   justify-content: left;
   padding-block: 1.5rem;
   /* font-style: normal; */
-  position: absolute;
 }
 
 .cta a {
   text-decoration: underline;
   padding-left: 0.32rem;
-  color: lightskyblue;
+  color: var(--clr-font-accent);
 }
 
-.contact-links--wrapper {
+.cta a:hover {
+  color: var(--clr-font-primary);
+}
+
+.contact-links-wrapper {
+  position: absolute;
   display: flex;
   justify-content: left;
   gap: 5%;
   align-items: center;
-  position: absolute;
   bottom: 0.5rem;
-  left: 2rem;
+  right: 2rem;
 }
 
-.contact-links--wrapper a {
-  color: whitesmoke;
+.contact-links-wrapper a {
+  color: var(--clr-font-primary);
 }
 
-.contact-links--wrapper a:hover {
-  color: lightskyblue;
+.contact-links-wrapper a:hover {
+  color: var(--clr-font-accent);
 }
 
-.contact-links--wrapper svg,
+.contact-links-wrapper svg,
 img {
   height: 35px;
   width: 35px;
 }
 
 .scroll-down-button {
-  position: absolute;
-  bottom: 0.5rem;
-  left: 50vw;
-  color: whitesmoke;
-}
-
-.scroll-down-button > * {
+  color: var(--clr-font-accent);
   height: 35px;
   width: 35px;
+  margin-right: 1rem;
+}
+
+.scroll-down-button:hover > * {
+  color: var(--clr-font-primary);
+}
+
+.headshot-wrapper img {
+  object-fit: cover;
+  width: 400px;
+  height: 400px;
+  border-radius: 10rem;
+  z-index: 10;
+}
+.headshot-wrapper {
+  display: grid;
+  place-content: center;
+  height: 500px;
+  aspect-ratio: 1;
+  background-color: var(--clr-secondary-bg);
+  z-index: 0;
+  border-radius: 10px;
 }
 
 /* -----------------PROJECTS----------------- */
@@ -168,37 +208,146 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   height: 100svh;
-  text-align: left;
-  min-width: 240px;
   width: 100%;
-  background-color: rgb(53, 53, 53);
+  background-color: var(--clr-secondary-bg);
+  position: relative;
+  overflow: hidden;
 }
+
+.projects-title {
+  display: flex;
+  align-items: center;
+  left: 0;
+  bottom: 0;
+  position: absolute;
+  font-size: 6rem;
+  text-transform: uppercase;
+  width: min-content;
+  line-height: 0.75;
+  pointer-events: none;
+  user-select: none;
+}
+
 /* -----------------ABOUT----------------- */
 
 .about-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   height: 100svh;
-  text-align: left;
+  text-align: center;
   min-width: 240px;
   width: 100%;
-  background-color: black;
+  background-color: var(--clr-primary-bg);
+  position: relative;
+  overflow: hidden;
+}
+
+.about-title {
+  display: flex;
+  align-items: center;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  font-size: 6rem;
+  text-transform: uppercase;
+  width: min-content;
+  line-height: 0.75;
 }
 
 /* -----------------CONTACT----------------- */
 
-.contact-wrapper {
+.contact-full-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   height: 100svh;
-  text-align: left;
+  text-align: center;
   min-width: 240px;
   width: 100%;
-  background-color: rgb(53, 53, 53);
+  background-color: var(--clr-secondary-bg);
+  position: relative;
+  overflow: hidden;
+}
+
+.contact-title {
+  display: flex;
+  align-items: center;
+  left: 0;
+  bottom: 0;
+  line-height: 0.75;
+  position: absolute;
+  font-size: 6rem;
+  text-transform: uppercase;
+  width: min-content;
+  line-height: 0.75;
+  pointer-events: none;
+  user-select: none;
+}
+
+.contact-links {
+  display: flex;
+  gap: 5rem;
+}
+
+.social-link {
+  font-size: 2rem;
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding-block: 1rem;
+  color: var(--clr-font-primary);
+  background-color: var(--clr-primary-bg);
+  outline: none;
+  border: none;
+  border: 3px solid var(--clr-font-accent);
+  border-radius: 1rem;
+}
+
+.social-link:hover {
+  color: var(--clr-font-dark);
+  background-color: var(--clr-font-accent);
+  outline: none;
+  border: none;
+  border: 3px solid var(--clr-font-accent);
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.contact-links a {
+  text-decoration: none;
+}
+
+.social-link-hr {
+  width: 35%;
+  background-color: var(--clr-font-accent);
+}
+
+.social-link:hover > .social-link-hr {
+  background-color: var(--clr-primary-bg);
+}
+
+/* -----------------FOOTER----------------- */
+
+.footer-wrapper {
+  height: 20svh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--clr-primary-bg);
+  color: var(--clr-font-primary);
+}
+
+.footer-content {
+  font-size: 1.2rem;
+}
+.footer-content hr {
+  margin: 2rem;
 }
