--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   --clr-font-dark: black;
   --clr-font-accent-2: lightblue;
 
-  --glow: 0px 0px 10px #87cefa;
+  --glow: 0px 0px 6px #87cefa;
 }
 /* -----------------APP----------------- */
 
@@ -29,10 +29,7 @@
   scroll-snap-align: start;
 } */
 
-html,
 body {
-  overflow: hidden;
-
   /* ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
@@ -55,6 +52,10 @@ body {
     border: 10px double #ffffff;
   }
 }
+html,
+body {
+  overflow: hidden;
+}
 
 .App {
   font-family: "Overpass Mono", monospace;
@@ -65,7 +66,6 @@ body {
   height: 100vh;
   overflow-y: scroll;
   overflow-x: hidden;
-  position: relative;
   scroll-snap-type: y mandatory;
   background-color: var(--clr-primary-bg);
 }
@@ -73,10 +73,6 @@ body {
 main > section {
   scroll-snap-align: start;
   scroll-snap-stop: always;
-}
-
-h2 > hr {
-  width: 100vw;
 }
 
 main > section > h2 {
@@ -93,8 +89,17 @@ main > section > h2 {
   user-select: none;
   z-index: 1;
   gap: 1.5rem;
-  opacity: 75%;
-  color: var(--clr-font-primary);
+  /* opacity: 80%; */
+  color: var(--clr-font-accent);
+  text-shadow: var(--glow);
+  /* filter: drop-shadow(5px 5px 5px var(--clr-secondary-bg)); */
+
+  hr {
+    width: 100vw;
+    color: transparent;
+    filter: blur(2px);
+    box-shadow: var(--glow);
+  }
 }
 
 /* -----------------NAVBAR----------------- */
@@ -117,29 +122,40 @@ main > section > h2 {
 
 .nav-logo-left {
   flex: 5;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   border-right: 3px solid var(--clr-font-accent);
-  text-shadow: var(--glow);
-  text-decoration: none;
-  color: var(--clr-font-accent);
-  font-weight: 600;
   display: flex;
-  font-size: calc(2vw + 2vh);
+  font-size: clamp(2rem, 1vw, 7rem);
+
+  a {
+    user-select: none;
+    text-decoration: none;
+    text-shadow: var(--glow);
+    color: var(--clr-font-accent);
+    font-weight: 600;
+  }
 }
 
 .nav-logo-left h2 {
-  display: flex;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  place-content: center;
 }
+
 .nav-items-right {
   display: flex;
   gap: 5rem;
   justify-content: space-evenly;
   align-items: center;
-  font-size: calc(0.75vw + 0.75vh);
+  font-size: clamp(1rem, 0.5vw, 3rem);
   padding-inline: 1rem;
 }
 
 .nav-items-right a {
+  user-select: none;
+
   text-decoration: none;
   color: var(--clr-font-primary);
   font-weight: 400;
@@ -162,13 +178,6 @@ main > section > h2 {
 /* ----------------- MEDIA QUERIES---------- */
 
 @media (max-width: 768px) {
-  .navbar {
-    gap: 0;
-  }
-  .nav-logo-left {
-    display: flex;
-    align-items: center;
-  }
   .nav-items-right {
     display: none;
   }
@@ -205,6 +214,7 @@ main > section > h2 {
     border: 2px solid var(--clr-font-accent);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    user-select: none;
   }
 
   .nav-mobile-wrapper-open a {
@@ -234,22 +244,10 @@ main > section > h2 {
     position: absolute;
     left: 0;
   }
-  /* .projects-list {
-    grid-template-rows: repeat(auto-fit, minmax(50em, 1fr));
-  } */
+
   /* -----------home media Q--------------- */
 }
 
-@media (max-width: 420px) {
-  .home-wrapper > .contact-links-wrapper {
-    position: absolute;
-    margin: 0 auto;
-    width: 100svw;
-    left: 0;
-    right: 0;
-    justify-content: center;
-  }
-}
 /* -----------------MEDIA Q END----------------- */
 
 /* -----------------------PAGE TITLES---------------- */
@@ -262,7 +260,7 @@ main > section > h2 {
   height: 100svh;
   position: relative;
   justify-content: center;
-  align-items: center;
+
   background-color: var(--clr-primary-bg);
   width: 100svw;
 }
@@ -270,9 +268,9 @@ main > section > h2 {
 .home-flex-1 {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
-  position: absolute;
-  left: 1rem;
+  justify-content: center;
+  margin: 1rem;
+  padding-inline: 1rem;
 }
 
 .greeting {
@@ -318,37 +316,53 @@ h1.name {
 
 .home-wrapper hr {
   margin-block: 1.5rem;
+  width: 90%;
 }
 
 .description {
   max-width: 750px;
-  font-size: clamp(1.05rem, 1vw, 4rem);
+  min-width: 600px;
   opacity: 85%;
   line-height: 1.8rem;
+  user-select: none;
 }
 
 .description a,
 .description strong {
-  text-decoration: none;
+  text-decoration: underline;
+  text-underline-offset: 0.3rem;
   font-weight: 800;
   color: var(--clr-font-accent);
 }
 
 .ctas-wrapper {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
+  max-width: 400px;
+  flex: 1;
+  align-items: center;
+  justify-content: left;
+  user-select: none;
+  height: 100%;
+
+  /* border: 1px solid red; */
+}
+
+.cta,
+.cta.CV {
+  display: block;
+  font-weight: 600;
+  padding: 0.75rem;
+  border-radius: 1rem;
+  text-decoration: none;
+  text-align: center;
+  font-size: clamp(0.9rem, 0.5vw, 1rem);
 }
 
 .cta {
-  color: var(--clr-font-primary);
-  font-weight: 600;
-  width: fit-content;
-  padding: 0.75rem;
-  border-radius: 1rem;
-  padding-inline: 2rem;
-  text-decoration: none;
   outline: 3px solid var(--clr-secondary-bg);
-  font-size: clamp(0.8rem, 1vw, 1.2rem);
+  flex: 0.75;
+  width: 100%;
 }
 
 .cta strong {
@@ -357,9 +371,15 @@ h1.name {
   text-underline-offset: 0.5rem;
 }
 
-/* .cta .CV {
-
-} */
+.cta.CV {
+  flex: 0.05;
+  color: var(--clr-font-accent);
+  font-weight: 600;
+  padding-inline: 1rem;
+  text-decoration: none;
+  outline: 3px solid var(--clr-secondary-bg);
+  font-size: clamp(0.9rem, 0.5vw, 1rem);
+}
 
 .cta:hover {
   color: var(--clr-font-primary);
@@ -387,8 +407,8 @@ h1.name {
   background-color: var(--clr-primary-bg);
   align-items: center;
   color: var(--clr-font-accent);
-  padding: 1rem;
-  border-radius: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.75rem;
   outline: 3px solid var(--clr-secondary-bg);
 }
 
@@ -411,78 +431,105 @@ img {
   display: flex;
   align-items: center;
   height: 100svh;
-  width: 100%;
-  /* background-color: var(--clr-secondary-bg); */
-  position: relative;
+  width: 100svw;
   overflow: hidden;
+  position: relative;
 }
 
 .projects-list {
-  /* display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-  grid-area: auto;
-  place-items: center; */
-  display: flex;
-  align-items: center;
-  justify-content: center;
   margin: 0 auto;
-  height: 65svh;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(10rem, 25rem));
+  width: 85svw;
+  gap: 3rem;
+  height: 80svh;
   overflow: hidden;
-  font-size: clamp(0.9rem, 1vw, 5rem);
-  gap: 0;
-}
-
-.arrow {
-  height: 2.5rem;
-  width: 2.5rem;
-}
-
-.arrow:hover {
-  color: var(--clr-font-accent);
-  scale: 2;
+  border: 1px solid red;
+  align-content: center;
+  justify-content: center;
+  padding-inline: 1rem;
 }
 
 .project-card {
+  font-size: clamp(0.9rem, 0.5vw, 3rem);
   outline: 3px solid var(--clr-secondary-bg);
-  padding-inline: 1rem;
-  padding-block: 1.5rem;
+  padding: 2rem;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
-  width: 60%;
-  height: min-content;
-  position: absolute;
+  width: 100%;
+}
 
-  canvas {
-    height: 15rem;
-    aspect-ratio: 1;
-    background-color: var(--clr-secondary-bg);
-    outline: 3px solid var(--clr-secondary-bg);
-    outline-offset: 0.5rem;
-    border-radius: 1rem;
-    margin-bottom: 2rem;
-  }
+.project-card canvas {
+  aspect-ratio: 1;
+  display: flex;
+  background-color: var(--clr-secondary-bg);
+  outline: 2px solid var(--clr-secondary-bg);
+  outline-offset: 0.25rem;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
+}
+
+.project-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: max-content;
 }
 
 .project-title {
   color: var(--clr-font-accent);
-  font-size: xx-large;
+  font-size: x-large;
   font-weight: 500;
 }
 
 .project-link-wrapper {
   display: flex;
+  height: 100%;
   gap: 2rem;
   justify-content: left;
-  align-items: center;
-  height: 3rem;
+  height: 100%;
   font-size: larger;
   font-weight: 500;
+}
+.project-link-wrapper a {
+  text-decoration: underline;
+  text-align: center;
+  color: var(--clr-font-accent);
+}
 
-  a {
-    text-decoration: underline;
-    text-align: center;
-    color: var(--clr-font-accent);
+@media (max-width: 1263px) {
+  .projects-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .project-card {
+    display: flex;
+    font-size: clamp(0.75rem, 2vw, 1.3rem);
+    flex-direction: row;
+    scale: 0.8;
+    gap: 2rem;
+    margin: 0;
+    height: calc(80svh / 3);
+    overflow: hidden;
+    padding: 0;
+    padding-block: 1rem;
+    padding-inline: 2rem;
+    width: fit-content;
+  }
+  .project-card canvas {
+    margin: 0;
+    padding: 0;
+    outline-width: 3px;
+  }
+
+  .description,
+  .project-description {
+    min-width: 15rem;
+    max-width: 50rem;
   }
 }
 
@@ -513,25 +560,39 @@ img {
 }
 
 .about-item-wrapper {
-  width: 100%;
+  width: 10rem;
   outline: 3px solid var(--clr-secondary-bg);
   outline-offset: 0.5rem;
   border-radius: 1rem;
 }
 
+.about-item-wrapper h4 {
+  color: var(--clr-font-accent);
+}
+
 .education-wrapper {
   display: flex;
   width: 75%;
+  align-items: center;
+  justify-content: center;
+  padding-block: 1rem;
 }
 
-.education-wrapper > h3 {
-  padding-bottom: 2rem;
+.education-wrapper h3 {
+  width: 100%;
+  font-size: smaller;
 }
 
-.education-without-titles {
+.education-wrapper p {
+  font-size: 1rem;
+  word-spacing: -0.2ch;
+  letter-spacing: -0.2ch;
+  width: 100%;
+}
+
+.education-without-title {
   display: flex;
   gap: 4rem;
-  justify-content: center;
 }
 
 /* -----------------CONTACT----------------- */
