--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,10 @@
 }
 /* -----------------APP----------------- */
 
-/* body {
-  scroll-behavior: smooth scroll;
-  scroll-snap-type: y mandatory;
-  scroll-snap-align: start;
-} */
+body {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   /* ===== Scrollbar CSS ===== */
@@ -52,10 +51,6 @@ body {
     border: 10px double #ffffff;
   }
 }
-html,
-body {
-  overflow: hidden;
-}
 
 .App {
   font-family: "Overpass Mono", monospace;
@@ -77,29 +72,17 @@ main > section {
 
 main > section > h2 {
   display: flex;
-  align-items: center;
-  right: 0.75rem;
-  bottom: 0.75rem;
   position: absolute;
-  font-size: clamp(4rem, 10vw, 5rem);
+  right: 0.75rem;
+  bottom: 0;
+  font-size: clamp(1rem, 10vw, 4rem);
   text-transform: uppercase;
-  width: min-content;
-  line-height: 0.75;
   pointer-events: none;
   user-select: none;
   z-index: 1;
   gap: 1.5rem;
-  /* opacity: 80%; */
   color: var(--clr-font-accent);
   text-shadow: var(--glow);
-  /* filter: drop-shadow(5px 5px 5px var(--clr-secondary-bg)); */
-
-  hr {
-    width: 100vw;
-    color: transparent;
-    filter: blur(2px);
-    box-shadow: var(--glow);
-  }
 }
 
 /* -----------------NAVBAR----------------- */
@@ -155,7 +138,6 @@ main > section > h2 {
 
 .nav-items-right a {
   user-select: none;
-
   text-decoration: none;
   color: var(--clr-font-primary);
   font-weight: 400;
@@ -166,6 +148,7 @@ main > section > h2 {
 .hamburger-wrapper {
   display: none;
 }
+
 #hamburger-icon {
   display: none;
 }
@@ -175,7 +158,7 @@ main > section > h2 {
   display: none;
 }
 
-/* ----------------- MEDIA QUERIES---------- */
+/* ----------------- MEDIA Q---------- */
 
 @media (max-width: 768px) {
   .nav-items-right {
@@ -221,36 +204,22 @@ main > section > h2 {
     text-decoration: none;
     color: var(--clr-font-primary);
   }
+
   .nav-mobile-wrapper-open a:focus {
     text-decoration: underline;
     color: var(--clr-font-primary);
   }
+
   .nav-mobile-wrapper-closed {
     display: none;
   }
 
   .nav-mobile-wrapper-open > hr {
-    width: 75%;
+    width: 55%;
   }
-  .headshot-img {
-    display: none !important;
-  }
-
-  .home-wrapper {
-    position: relative;
-  }
-
-  .home-flex-1 {
-    position: absolute;
-    left: 0;
-  }
-
-  /* -----------home media Q--------------- */
 }
 
 /* -----------------MEDIA Q END----------------- */
-
-/* -----------------------PAGE TITLES---------------- */
 
 /* -----------------HOME----------------- */
 
@@ -274,7 +243,7 @@ main > section > h2 {
 }
 
 .greeting {
-  font-size: clamp(1.5rem, 3vw, 10rem);
+  font-size: clamp(1.5rem, 1vw, 15rem);
   font-weight: 500;
   user-select: none;
   opacity: 90%;
@@ -325,6 +294,7 @@ h1.name {
   opacity: 85%;
   line-height: 1.8rem;
   user-select: none;
+  font-size: clamp(1rem, 1vw, 1.3rem);
 }
 
 .description a,
@@ -344,8 +314,6 @@ h1.name {
   justify-content: left;
   user-select: none;
   height: 100%;
-
-  /* border: 1px solid red; */
 }
 
 .cta,
@@ -385,12 +353,6 @@ h1.name {
   color: var(--clr-font-primary);
   background-color: var(--clr-font-dark);
   font-weight: 600;
-  outline-offset: 0.05rem;
-  outline: 3px solid var(--clr-font-accent);
-
-  strong {
-    color: var(--clr-font-accent);
-  }
 }
 
 .contact-links-wrapper {
@@ -419,8 +381,7 @@ h1.name {
   font-weight: 900;
 }
 
-.contact-links-wrapper svg,
-img {
+.contact-links-wrapper svg {
   width: 1.5rem;
   height: 1.5rem;
 }
@@ -439,12 +400,11 @@ img {
 .projects-list {
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, minmax(10rem, 25rem));
+  grid-template: "projectOne projectTwo projectThree";
   width: 85svw;
   gap: 3rem;
   height: 80svh;
   overflow: hidden;
-  border: 1px solid red;
   align-content: center;
   justify-content: center;
   padding-inline: 1rem;
@@ -457,23 +417,34 @@ img {
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 
-.project-card canvas {
-  aspect-ratio: 1;
-  display: flex;
-  background-color: var(--clr-secondary-bg);
-  outline: 2px solid var(--clr-secondary-bg);
-  outline-offset: 0.25rem;
+#project-1 {
+  grid-area: projectOne;
+  img {
+    filter: hue-rotate(180deg);
+  }
+}
+#project-2 {
+  grid-area: projectTwo;
+}
+#project-3 {
+  grid-area: projectThree;
+}
+
+.project-card img {
+  background-size: cover;
+  height: 100%;
+  width: 100%;
   border-radius: 1rem;
-  margin-bottom: 2rem;
 }
 
 .project-text-wrapper {
   display: flex;
   flex-direction: column;
   height: max-content;
+  padding-block: 1rem;
+  gap: 0.4rem;
 }
 
 .project-title {
@@ -490,48 +461,98 @@ img {
   height: 100%;
   font-size: larger;
   font-weight: 500;
+  padding-block: 1rem;
 }
+
 .project-link-wrapper a {
   text-decoration: underline;
   text-align: center;
   color: var(--clr-font-accent);
 }
+/* ----------------- MEDIA Q---------- */
 
 @media (max-width: 1263px) {
   .projects-list {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    overflow: hidden;
+    display: grid;
+    grid-template:
+      "projectOne"
+      "projectTwo"
+      "projectThree";
+    gap: 0;
   }
 
   .project-card {
     display: flex;
-    font-size: clamp(0.75rem, 2vw, 1.3rem);
     flex-direction: row;
     scale: 0.8;
     gap: 2rem;
-    margin: 0;
-    height: calc(80svh / 3);
-    overflow: hidden;
-    padding: 0;
+    height: calc(85svh / 3);
     padding-block: 1rem;
-    padding-inline: 2rem;
-    width: fit-content;
+    padding-inline: 1rem;
+    min-width: 100svw;
   }
-  .project-card canvas {
-    margin: 0;
-    padding: 0;
-    outline-width: 3px;
+
+  .project-img {
+    flex: 1;
+  }
+  .project-text-wrapper {
+    flex: 2;
+    height: 100%;
+  }
+
+  .project-link-wrapper {
+    align-items: flex-end;
   }
 
   .description,
   .project-description {
     min-width: 15rem;
-    max-width: 50rem;
+    max-width: 30rem;
   }
 }
+
+@media (max-width: 790px) {
+  .projects-list {
+    display: grid;
+    grid-template:
+      "projectOne"
+      "projectTwo"
+      "projectThree";
+    gap: 0;
+  }
+  .project-card {
+    min-width: 100svw;
+    align-items: center;
+    justify-content: center;
+    height: calc(80svh / 3);
+    outline: 5px solid var(--clr-secondary-bg);
+    overflow: hidden;
+  }
+  .project-card .project-title {
+    z-index: 100;
+    position: absolute;
+    bottom: 1rem;
+    text-align: left;
+    align-items: center;
+    display: flex;
+    backdrop-filter: blur(20px);
+  }
+  .project-card img {
+    outline: 0px;
+    position: absolute;
+  }
+  .project-card:hover,
+  .project-card:focus {
+    img {
+      visibility: hidden;
+    }
+    h3 {
+      position: unset;
+      display: flex;
+    }
+  }
+}
+/* -----------------MEDIA Q END----------------- */
 
 /* -----------------ABOUT----------------- */
 
@@ -549,52 +570,152 @@ img {
   overflow: hidden;
 }
 
-.about-wrapper #seperator {
-  width: 80%;
-  margin-block: 2rem;
+.about-inner-wrapper {
+  max-height: 85svh;
+  min-height: 80svh;
+  min-width: 85svw;
+  padding-inline: 2rem;
+  padding-block: 5rem;
+}
+
+.skills-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  grid-area: skills;
+  padding-block: 2rem;
+}
+
+.skills-wrapper ul {
+  display: flex;
+  gap: 2rem;
+  list-style: none;
+  justify-content: space-evenly;
+  padding-block: 1rem;
+  border-block: 1px solid white;
+}
+
+.skills-wrapper h3 {
+  font-size: x-large;
+  color: var(--clr-font-accent);
+  /* text-decoration: underline; */
+}
+
+.skills-wrapper li {
+  outline: 3px solid var(--clr-secondary-bg);
+  border-radius: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 4rem;
+}
+
+.about-span-wrapper {
+  display: grid;
+  grid-template:
+    "skills skills"
+    "aboutSpan aboutImg"
+    "education aboutImg"
+    "experience aboutImg";
+  align-items: center;
+  justify-items: center;
+  gap: 2rem;
 }
 
 .about-span {
-  width: 30rem;
-  margin-bottom: 5rem;
+  grid-area: aboutSpan;
+  max-width: 30rem;
+  grid-row: 1/1;
+}
+
+.headshot-img {
+  grid-area: aboutImg;
+  border-radius: 2rem;
+  height: 20rem;
+}
+
+.education-wrapper {
+  grid-area: education;
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.education-wrapper h3,
+.experience-wrapper h3 {
+  padding-right: 2rem;
+  text-decoration: underline;
+  text-underline-offset: 0.5rem;
+  color: var(--clr-font-accent);
+}
+
+.experience-wrapper {
+  grid-area: experience;
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 
 .about-item-wrapper {
-  width: 10rem;
+  width: 20rem;
   outline: 3px solid var(--clr-secondary-bg);
-  outline-offset: 0.5rem;
   border-radius: 1rem;
+  padding: 0.5rem;
+  gap: 0.25rem;
 }
 
 .about-item-wrapper h4 {
   color: var(--clr-font-accent);
+  font-size: large;
 }
 
-.education-wrapper {
-  display: flex;
-  width: 75%;
-  align-items: center;
-  justify-content: center;
-  padding-block: 1rem;
+.about-item-wrapper h5 {
+  font-weight: 200;
+  font-size: small;
 }
 
-.education-wrapper h3 {
+.about-item-wrapper p {
+  font-weight: 300;
+  opacity: 85%;
+  font-size: small;
+}
+
+/* .about-wrapper #seperator {
   width: 100%;
-  font-size: smaller;
+  margin-block: 2rem;
+} */
+
+@media (max-width: 1263px) {
+  .about-span-wrapper {
+    display: grid;
+    grid-template:
+      "aboutSpan aboutImg"
+      "skills skills"
+      "education education"
+      "experience experience";
+    align-items: center;
+    justify-items: center;
+  }
+
+  .skills-wrapper {
+    flex-wrap: wrap;
+  }
 }
 
-.education-wrapper p {
-  font-size: 1rem;
-  word-spacing: -0.2ch;
-  letter-spacing: -0.2ch;
-  width: 100%;
+@media (max-width: 790px) {
+  .about-span-wrapper {
+    display: grid;
+    grid-template:
+      "aboutSpan aboutImg"
+      "skills skills"
+      "education education"
+      "experience experience";
+    align-items: center;
+    justify-items: center;
+  }
 }
-
-.education-without-title {
-  display: flex;
-  gap: 4rem;
-}
-
 /* -----------------CONTACT----------------- */
 
 .contact-full-wrapper {
@@ -609,10 +730,6 @@ img {
   background-color: var(--clr-primary-bg);
   position: relative;
   overflow: hidden;
-}
-
-.contact-full-wrapper hr:not(.social-link-hr) {
-  width: 100vw;
 }
 
 .contact-full-wrapper > .contact-links-wrapper {
@@ -637,7 +754,7 @@ img {
   width: 100%;
   align-items: center;
   justify-content: center;
-  background-color: var(--clr-secondary-bg);
+  background-color: var(--clr-primary-bg);
   color: var(--clr-font-primary);
   font-weight: 700;
   text-align: center;
